clusters/xs4/kube/oldlab/jellyfin/endpoints.yaml
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: "oldlab-jellyfin-service" 
subsets: 
  - addresses:
      - ip: "192.168.80.103" 
    ports:
      - name: "http"
        port: 8096
