clusters/xs4/kube/oldlab/jellyfin/services.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "oldlab-jellyfin-service"
spec:
  ports:
    - name: "http"
      protocol: "TCP"
      port: 80
      targetPort: 8096
